--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightblue;
     font-family: Verdana;
 }  
 #content {
@@ -30,15 +30,13 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Jed Delich</h1>
+        <h2>Senior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a Senior at Bob Jones University studying biblical counseling with a minor in 
+          business. After graduation I will work at a church in New Freedom, PA.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I attend Palmetto Baptist Church and I am engaged to Alicia DeMott.
          </p> 
          <p>
             I enjoy listening to podcasts and having deep conversations.
