--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ h3 {
          <p>
             I enjoy listening to podcasts and having deep conversations.
          </p>
-        <h3>EDUCATION</h3>
-        Computer Science<br />
+        <h3>SCHOOL OF REILGION</h3>
+        Biblical Counseling<br />
         Bob Jones University
     </div>
            
