--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ h3 {
 <body>
     <div id="content">
         <h1>Jed Delich</h1>
-        <h2>Senior in Greenville, South Carolina</h2>
+        <h2>Senior in Greenville, SC</h2>
         
          <p>I am a Senior at Bob Jones University studying biblical counseling with a minor in 
-          business. After graduation I will work at a church in New Freedom, PA.</p>
+          business. After graduation I will work as a pastoral assistant at a church in New Freedom, PA.</p>
          <p>
-            I attend Palmetto Baptist Church and I am engaged to Alicia DeMott.
+            I currently attend Palmetto Baptist Church and will get married to Alicia DeMott in August.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy playing basketball and working on puzzles.
          </p>
-        <h3>SCHOOL OF REILGION</h3>
+        <h3>SCHOOL OF RELIGION</h3>
         Biblical Counseling<br />
         Bob Jones University
     </div>
