--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ h3 {
          <p>I am a Senior at Bob Jones University studying biblical counseling with a minor in 
           business. After graduation I will work as a pastoral assistant at a church in New Freedom, PA.</p>
          <p>
-            I currently attend Palmetto Baptist Church and will get married to Alicia DeMott in August.
+            I currently attend Palmetto Baptist Church and will get married to Alicia DeMott in the fall (August 27th).
          </p> 
          <p>
-            I enjoy playing basketball and working on puzzles.
+            I enjoy playing basketball and working on puzzles!
          </p>
         <h3>SCHOOL OF RELIGION</h3>
         Biblical Counseling<br />
