--- a/index.html
+++ b/index.html
@@ -1,50 +1,163 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<style>
-body {
-    background: lightblue;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
-<body>
-    <div id="content">
-        <h1>Jed Delich</h1>
-        <h2>Senior in Greenville, SC</h2>
-        
-         <p>I am a Senior at Bob Jones University studying biblical counseling with a minor in 
-          business. After graduation I will work as a pastoral assistant at a church in New Freedom, PA.</p>
-         <p>
-            I currently attend Palmetto Baptist Church and will get married to Alicia DeMott in the fall (August 27th).
-         </p> 
-         <p>
-            I enjoy playing basketball and working on puzzles!
-         </p>
-        <h3>SCHOOL OF RELIGION</h3>
-        Biblical Counseling<br />
-        Bob Jones University
-    </div>
-           
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Jed Delich</title>
+    <meta name="description" content="This website was created for a class and its purpose is to introduce the visitor to who I am and what I do!">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
+</head>
+
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="57">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand" href="#page-top">Jed Delich</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">My career</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">picture</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="text-center text-white d-flex masthead" style="background-image: url('assets/img/header.jpg');">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase"><strong>WElcome to my website!</strong></h1>
+                    <hr>
+                </div>
+            </div>
+            <div class="col-lg-8 mx-auto">
+                <p class="text-faded mb-5">Feel free to look around and see what you can discover about me!</p><a class="btn btn-primary btn-xl" role="button" href="#services">Want to see a picture?</a>
+            </div>
+        </div>
+    </header>
+    <section id="about" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col offset-lg-8 text-center mx-auto">
+                    <h2 class="text-white section-heading">Hi! My name is Jed!</h2>
+                    <hr class="light my-4">
+                    <p class="fs-5 text-faded mb-4">I am a 22-year-old, INFP. I am a senior at Bob Jones University (BJU) and will graduate in just under a month! I grew up for most of my life in Sweden, but then spent a few in years in the Caribbean before making my way to South Carolina. I am a Christian and want to make a difference in the world! Curious in what I want to do for a living? Keep reading below!</p><a class="btn btn-light btn-xl" role="button" href="#services">My career in the future</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">My Career in the Future</h2>
+                    <hr class="my-4">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-book fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
+                        <h3 class="mb-3">Biblical Counselor</h3>
+                        <p class="text-muted mb-0">My long-term goal is to become a biblical counselor!</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-user fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
+                        <h3 class="mb-3">Pastoral Assistant</h3>
+                        <p class="text-muted mb-0">After graduation I will be working as a pastoral assistant in PA!</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-check-square fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true" style="color: rgb(240, 95, 64);"></i>
+                        <h3 class="mb-3">ACBC Certification</h3>
+                        <p class="text-muted mb-0">My next step will be to get my ACBC certification!</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-comments fa-4x text-primary mb-3 sr-icons" data-aos="fade" data-aos-duration="200" data-aos-delay="600" data-aos-once="true"></i>
+                        <h3 class="mb-3">Counseling Ministry</h3>
+                        <p class="text-muted mb-0">I want to start a counseling ministry at the church I will be working with!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="portfolio" class="p-0">
+        <div class="container-fluid p-0">
+            <div class="row g-0 popup-gallery">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/2.jpg">
+                        <div class="d-none portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"></div>
+                                <div class="project-name"></div>
+                            </div>
+                        </div>
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/3.jpg">
+                        <div class="d-none portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"></div>
+                                <div class="project-name"></div>
+                            </div>
+                        </div>
+                    </a><img class="img-fluid" src="assets/img/thumbnails/georgiaengagementphotos-117.jpg" width="326" height="489"></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/4.jpg">
+                        <div class="d-none portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"></div>
+                                <div class="project-name"></div>
+                            </div>
+                        </div>
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/5.jpg">
+                        <div class="d-none portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"></div>
+                                <div class="project-name"></div>
+                            </div>
+                        </div>
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/6.jpg">
+                        <div class="d-none portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"></div>
+                            </div>
+                        </div>
+                    </a></div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 text-center mx-auto">
+                    <h2 class="section-heading">Let's get in contact!</h2>
+                    <hr class="my-4">
+                    <p class="mb-5">Are you in need of Biblical Counseling? Give me a call or send me an email and I'll get back to you as soon as possible and let you know when I'm available!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 text-center ms-auto"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
+                    <p>484-752-6481</p>
+                </div>
+                <div class="col-lg-4 text-center me-auto"><i class="fa fa-envelope fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
+                    <p><a>jeddelich@outlook.com</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/aos.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/baguetteBox.min.js"></script>
+    <script src="assets/js/creative.js"></script>
 </body>
+
 </html>
