--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5">Feel free to look around and see what you can discover about me!</p><a class="btn btn-primary btn-xl" role="button" href="#services">Want to see a picture?</a>
+                <p class="text-faded mb-5">Feel free to look around and see what you can discover about me!</p><a class="btn btn-primary btn-xl" role="button" href="#portfolio">Want to see a picture?</a>
             </div>
         </div>
     </header>
@@ -46,7 +46,7 @@
                 <div class="col offset-lg-8 text-center mx-auto">
                     <h2 class="text-white section-heading">Hi! My name is Jed!</h2>
                     <hr class="light my-4">
-                    <p class="fs-5 text-faded mb-4">I am a 22-year-old, INFP. I am a senior at Bob Jones University (BJU) and will graduate in just under a month! I grew up for most of my life in Sweden, but then spent a few in years in the Caribbean before making my way to South Carolina. I am a Christian and want to make a difference in the world! Curious in what I want to do for a living? Keep reading below!</p><a class="btn btn-light btn-xl" role="button" href="#services">My career in the future</a>
+                    <p class="fs-5 text-faded mb-4">I am a 22-year-old, INFP. I am a senior at Bob Jones University (BJU) and will graduate in just under a month! I grew up for most of my life in Sweden, but then spent a few in years in the Caribbean before making my way to South Carolina. I am a Christian and want to make a difference in the world! Curious of what I want to do for a living? Keep reading below!</p><a class="btn btn-light btn-xl" role="button" href="#services">My career in the future</a>
                 </div>
             </div>
         </div>
